--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "nodejs-starter",
+  "name": "graphql-api",
   "version": "1.0.0",
-  "description": "A simple NodeJS Starter",
+  "description": "A simple GraphQL API",
   "main": "src/index.js",
   "scripts": {
     "dev": "nodemon --exec npm run start-dev-server -- src",
     "start-dev-server": "babel-node src",
     "start": "node server",
-    "build": "babel src --out-dir server"
+    "build": "babel src --out-dir server",
+    "migrate": "knex migrate:latest --knexfile ./src/db/config.js",
+    "migrate:seeds": "knex seed:run --knexfile ./src/db/config.js",
   },
   "author": {
     "name": "Gabriel Marote",
@@ -15,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Gamarote/NodeJS-Starter.git"
+    "url": "https://github.com/Gamarote/GraphQL-API.git"
   },
   "license": "MIT",
   "devDependencies": {
@@ -25,10 +27,21 @@
     "nodemon": "^1.17.3"
   },
   "dependencies": {
+    "apollo-codegen": "^0.19.1",
+    "apollo-link-http": "^1.5.4",
+    "apollo-server-express": "^1.3.5",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.2",
+    "bookshelf": "^0.13.3",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "express-graphql": "^0.6.12",
+    "graphql": "^0.13.2",
+    "graphql-tools": "^2.24.0",
+    "knex": "^0.14.6",
+    "lodash": "^4.17.5",
+    "pg": "^7.4.1",
+    "uuid": "^3.2.1"
   }
 }
