--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
     "graphql-tools": "^2.24.0",
+    "joi": "^13.2.0",
     "knex": "^0.14.6",
     "lodash": "^4.17.5",
     "pg": "^7.4.1",
